<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66B149">

    <TextView
        android:id="@+id/textView3"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="681dp"
        android:layout_height="93dp"
        android:background="#EFECEC"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/txt1menu"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="27sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:drawableTint="#A87070"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/buttonexplicacaomenu"
        android:layout_width="507dp"
        android:layout_height="58dp"
        android:text="@string/txtbuttonexplicacao"
        android:textSize="22sp"
        app:backgroundTint="#878383"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.695" />

    <Button
        android:id="@+id/button2"
        android:layout_width="429dp"
        android:layout_height="47dp"
        android:text="@string/txtbuttonjogarmenu"
        android:textSize="22sp"
        app:backgroundTint="#878383"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <Space
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonexplicacaomenu" />
</androidx.constraintlayout.widget.ConstraintLayout>